--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,8 @@
     "require-dev": {
         "phpunit/phpunit": "5.5.*",
         "php-vcr/php-vcr": "^1.2"
+    },
+    "autoload": {
+        "classmap": ["validations/", "helpers/"]
     }
 }
